fixed .spaces-wrap section

--- a/banister.lawlytics.frontend.css
+++ b/banister.lawlytics.frontend.css
@@ -916,10 +916,14 @@ input[type=checkbox] {
 }
 
 .spaces-wrap {
-  display: flex;
-  justify-content: space-between;
-  margin: unset !important;
-  max-width: unset !important;
+    padding-top: 75px;
+    padding-right: 20px;
+    padding-bottom: 75px;
+    padding-left: 20px;
+    max-width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;
 }
 
 /* Footer */
